executar o sorteio varias vezes

--- a/index.html
+++ b/index.html
@@ -20,9 +20,15 @@
                     <input type="text" placeholder="Nome" >
                     <input type="text" placeholder="Nome" >
                     <input type="text" placeholder="Nome">
+                    <input type="text" placeholder="Nome" >
+                    <input type="text" placeholder="Nome">
+                    <input type="text" placeholder="Nome">
                 </div>
                 <div class="setores colunas">
                     <input type="text" placeholder="Setor">
+                    <input type="text" placeholder="Setor" >
+                    <input type="text" placeholder="Setor" >
+                    <input type="text" placeholder="Setor" >
                     <input type="text" placeholder="Setor" >
                     <input type="text" placeholder="Setor" >
                     <input type="text" placeholder="Setor" >
