background and input

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>Pilar Gestão</title>
     <link href="./assets/css/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
@@ -17,9 +17,17 @@
                     <input type="text" class="func">
                     <input type="text" class="func">
                     <input type="text" class="func">
+                    <input type="text" class="func">
+                    <input type="text" class="func">
+                    <input type="text" class="func">
+                    <input type="text" class="func">
                 </div>
                <div class="departamentos">
                    <label for="departamentos">Departamentos</label>
+                <input type="text" class="dep">
+                <input type="text" class="dep">
+                <input type="text" class="dep">
+                <input type="text" class="dep">
                 <input type="text" class="dep">
                 <input type="text" class="dep">
                 <input type="text" class="dep">
